--- a/css/sytyles.css
+++ b/css/sytyles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html {
@@ -91,7 +92,14 @@ body {
 }
 
 .nav-item a:hover {
-    color: #29d7e1;
+    background-color: #29d7e1;
+    padding: 7px;
+    border-radius: 5px;
+    transition: all 0.5s  ease;
+    -webkit-transition: all 0.5s  ease;
+    -moz-transition: all 0.5s  ease;
+    -ms-transition: all 0.5s  ease;
+    -o-transition: all 0.5s  ease;
 }
 
 .welcome-message {
@@ -190,12 +198,13 @@ body {
 .body {
     margin: 0 auto;
     --bs-gutter-y: 3rem;
+    display: flex;
 }
 
 .body .introduction {
     width: 65%;
     padding: 0 10px;
-    display: inline-block;
+    /* display: inline-block; */
     margin-top: 5%;
     vertical-align: middle;
 }
@@ -227,9 +236,11 @@ strong {
 
 .contact-list {
     list-style: none;
-    display: inline-block;
+    display: flex;
     text-align: left;
     margin-bottom: 10px;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card {
@@ -273,10 +284,13 @@ strong {
 
 .brands {
     margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .brands .brand-card {
-    display: inline-block;
+    /* display: inline-block; */
     width: 20%;
     padding: 20px;
 }
@@ -355,6 +369,15 @@ section.about {
     padding: 20px;
     margin-bottom: 20px;
     border-radius: 10px;
+}
+
+.summary-box:hover{
+    border: 4px solid #29d7e1;
+    transition: border 0.7s ease;
+    -webkit-transition: border 0.7s ease;
+    -moz-transition: border 0.7s ease;
+    -ms-transition: border 0.7s ease;
+    -o-transition: border 0.7s ease;
 }
 
 .summary-box p:first-child {
@@ -442,6 +465,11 @@ section.about {
 .download-cv a:hover {
     background-color: #167784;
     color: white;
+    transition: all 0.7s ease;
+    -webkit-transition: all 0.7s ease;
+    -moz-transition: all 0.7s ease;
+    -ms-transition: all 0.7s ease;
+    -o-transition: all 0.7s ease;
 }
 
 .download-cv a i {
