--- a/css/sytyles.css
+++ b/css/sytyles.css
@@ -33,14 +33,14 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    height: 850px;
     width: 100%;
 }
 
 .section {
-    padding: 7.5rem 0;
+    padding: 5rem 0;
     text-align: center;
-    margin: 0 auto;
+    margin: 5% auto;
 }
 
 .container {
@@ -69,7 +69,9 @@ body {
 
 .logo,
 .nav-items {
-    display: inline-block;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 .nav-items {
@@ -198,15 +200,18 @@ body {
 .body {
     margin: 0 auto;
     --bs-gutter-y: 3rem;
-    display: flex;
+    width: 90%;
+}
+
+.row{
+    display: inline-grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 100px;
 }
 
 .body .introduction {
-    width: 65%;
     padding: 0 10px;
-    /* display: inline-block; */
     margin-top: 5%;
-    vertical-align: middle;
 }
 
 
@@ -228,7 +233,6 @@ strong {
 }
 
 .contacts {
-    width: 30%;
     display: inline-block;
     margin-top: 5%;
     vertical-align: middle;
@@ -240,7 +244,6 @@ strong {
     text-align: left;
     margin-bottom: 10px;
     flex-direction: column;
-    align-items: center;
 }
 
 .card {
@@ -319,8 +322,21 @@ section.about {
     display: inline-block;
 }
 
+.gridview{
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    grid-gap: 50px;
+    align-items: center;
+    justify-items: center;
+}
+.progress{
+    grid-template-columns: 1fr 1fr;
+    
+}
 .box {
     margin-bottom: 20px;
+    width: 90%;
 }
 
 .box div {
@@ -352,18 +368,24 @@ section.about {
 .icon {
     vertical-align: top;
 }
-
+.titles{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 100px;
+}
 .title {
-    width: 40%;
+    width: 50%;
     margin-bottom: 20px;
 }
-
+.p-100{
+    padding-left: 100px;
+}
 .title h1 {
     text-align: left;
 }
 
 .summary-box {
-    width: 80%;
+    width: 90%;
     text-align: center;
     border: 1px solid rgb(68, 68, 68);
     padding: 20px;
@@ -398,6 +420,9 @@ section.about {
     color: red;
 }
 
+.skill{
+    width: 80%;
+}
 .skill-title {
     text-align: left;
     width: 90%;
