--- a/css/sytyles.css
+++ b/css/sytyles.css
@@ -326,7 +326,7 @@ section.about {
     display: grid;
     grid-template-columns: auto auto;
     justify-content: center;
-    grid-gap: 50px;
+    grid-gap: 20px;
     align-items: center;
     justify-items: center;
 }
@@ -525,10 +525,12 @@ section.about {
 
 .clients {
     width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 .clients .item {
-    display: inline-block;
     width: 40%;
     margin-right: 2%;
     background-color: #e9ebed;
@@ -590,7 +592,8 @@ p.displayblock * {
 
 .left-info,
 .right-form {
-    display: inline-block;
+    display: inline-flex;
+    flex-direction: column;
 }
 
 .left-info {
@@ -633,7 +636,7 @@ p.displayblock * {
 }
 
 .w40 {
-    width: 45%;
+    width: 47%;
 }
 
 .input-group .input {
@@ -644,7 +647,7 @@ p.displayblock * {
 
 .form-input {
     width: 100%;
-    height: 25px;
+    height: 50px;
     padding: 10px;
     border-radius: 5px;
     border: 1px solid gray;
