added shadow and increased border redius

--- a/FrontendMentor/qr-code-component-main/css/style.css
+++ b/FrontendMentor/qr-code-component-main/css/style.css
@@ -21,11 +21,13 @@ body{
     background-color: hsl(0, 0%, 100%);
     width: 20%;
     padding: 15px;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
+    box-shadow: 15px 15px 17px 1px rgba(144,144,144,0.1);
+
 }
 
 @media (max-width: 375px){
@@ -40,11 +42,11 @@ body{
 
 .image img{
     max-width: 100%;
-    border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -ms-border-radius: 10px;
-    -o-border-radius: 10px;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px;
 }
 
 .texting{
