--- a/FrontendMentor/qr-code-component-main/css/style.css
+++ b/FrontendMentor/qr-code-component-main/css/style.css
@@ -1,3 +1,10 @@
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -52,7 +59,7 @@ body{
 .texting{
     max-width: 90%;
     margin: 5% auto;
-    padding: 20px;
+    padding: 5px;
     text-align: center;
     color: hsl(220, 15%, 55%);
     font-weight: 700;
