--- a/FrontendMentor/qr-code-component-main/css/style.css
+++ b/FrontendMentor/qr-code-component-main/css/style.css
@@ -16,8 +16,7 @@ body{
 }
 
 .main-container{
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -26,7 +25,7 @@ body{
 
 .qr-code{
     background-color: hsl(0, 0%, 100%);
-    width: 20%;
+    max-width: 320px;
     padding: 15px;
     border-radius: 15px;
     -webkit-border-radius: 15px;
@@ -72,5 +71,5 @@ body{
 p{
     font-size: 15px;
     font-weight: 400;
-    color: hsl(212, 45%, 89%);
+    color: hsl(212deg 14% 68%);
 }
