--- a/FrontendMentor/product-preview-card-component-main/css/style.css
+++ b/FrontendMentor/product-preview-card-component-main/css/style.css
@@ -1,3 +1,13 @@
+/* variables */
+
+:root{
+    --main-color: hsl(30, 38%, 92%);
+    --cyn : hsl(158, 36%, 37%);
+    --vary-dark-blue: hsl(212, 21%, 14%);
+    --Dark-grayish-blue: hsl(225, 10%, 8%);
+    --White: hsl(0, 0%, 100%);
+}
+
 html{
     box-sizing: border-box;
 }
@@ -7,105 +17,139 @@ html{
 	padding: 0;
 	border: 0;
 	vertical-align: baseline;
+    box-sizing: border-box;
 }
 
 body{
-    background-color: hsl(30, 38%, 92%);
+    background-color: var(--main-color);
+    max-height: 100vh;
+    font-size: 14px;
 }
 
-main{
-    width: 100%;
-    height: 95vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.product{
-    width: 50%;
-    min-height: 60vh;
+.grid{
     display: grid;
-    grid-template-areas: "image details" ;
+    grid-template-columns: repeat(12,1fr);
+    max-width: 100%;
+}
+
+.rounded{
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    background-color: hsl(0, 0%, 100%);
 }
 
-.product-image{
-    grid-area: image;
-    background-image: url("/images/image-product-desktop.jpg");
-    width: 300px;
-    background-size: cover;
-    background-repeat: no-repeat;
-    border-radius: 10px 0px 0px 10px;
-    -webkit-border-radius: 10px 0px 0px 10px;
-    -moz-border-radius: 10px 0px 0px 10px;
-    -ms-border-radius: 10px 0px 0px 10px;
-    -o-border-radius: 10px 0px 0px 10px;
+.rounded-image{
+    border-radius: 10px 10px 0px 0px;
+    -webkit-border-radius: 10px 10px 0px 0px;
+    -moz-border-radius: 10px 10px 0px 0px;
+    -ms-border-radius: 10px 10px 0px 0px;
+    -o-border-radius: 10px 10px 0px 0px;
+}
+
+.product{
+    background-color: var(--White);
+    /* max-height: 600px;  */
+    grid-column: 2/12;
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+}
+
+.product-image img{
+    width: 100%;
 }
 
 .product-details{
-    grid-area: details;
-    max-width: 300px;
-    padding: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    padding: 20px;
 }
 
-.product-details h5{
-    letter-spacing: 5px;
+.product-details h3{
     text-transform: uppercase;
-}
-
-.product-details *{
-    margin-top: 5%;
-}
-
-h3,p,h4,h5{
     font-family: Montserrat;
-    color: hsl(228, 12%, 48%);
     font-weight: 700;
+    letter-spacing: 5px;
+    padding: 5px 0;
+    color: var(--Dark-grayish-blue);
 }
 
-h1{
+.product-details h1{
     font-family: Fraunces;
     font-weight: 700;
-    line-height: 30px;
+    padding: 10px 0;
+    font-size: 2rem;
 }
 
-p{
-    font-size: 14px;
+.product-details p{
+    font-family: Montserrat;
+    font-weight: 400;
+    color: var(--Dark-grayish-blue);
 }
 
-.price{
-    display: inline-flex;
-    flex-direction: row;
-    justify-content: flex-start;
+.product-details .price{
+    display: flex;
     align-items: center;
-    flex-wrap: nowrap;
-    gap: 20px;
+    gap: 30px;
+    padding: 10px 0;
 }
 
-.price h1{
-    color: hsl(158, 36%, 37%);
-}
-
-.price h4{
+.product-details .price h4{
+    font-size: 1.2em;
     text-decoration: line-through;
+    color: var(--Dark-grayish-blue);
+}
+
+.product-details .price h1{
+    color: var(--cyn);
 }
 
 .cart-btn{
     text-decoration: none;
-    background-color: hsl(158, 36%, 37%);
-    padding: 15px;
+    background-color: var(--cyn);
+    padding: 15px 40px;
+    display: block;
+    text-align: center;
+    color: var(--White);
+    font-size: 1.3rem;
     border-radius: 10px;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
-    color: hsl(0, 0%, 100%);
-    text-align: center;
+}
+
+@media screen and (min-width: 960px) {
+    
+    .product{
+        display: flex;
+        flex-direction: row;
+        grid-column: 4/10;
+        margin-top: 150px;
+        max-height: 400px;
+        justify-content: center;
+    }
+    
+    .rounded-image{
+        border-radius: 10px 0 0 10px;
+        -webkit-border-radius: 10px 0 0 10px;
+        -moz-border-radius: 10px 0 0 10px;
+        -ms-border-radius: 10px 0 0 10px;
+        -o-border-radius: 10px 0 0 10px;
+    }
+
+    .product-image{
+        width: 100%;
+    }
+    
+    .product-image img{
+        content:url("/images/image-product-desktop.jpg");
+        height: 100%;
+    }
+
+    .product-details{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+    }
 }
