--- a/FrontendMentor/product-preview-card-component-main/css/style.css
+++ b/FrontendMentor/product-preview-card-component-main/css/style.css
@@ -143,7 +143,7 @@ body{
     }
     
     .product-image img{
-        content:url("./images/image-product-desktop.jpg");
+        content:url("../images/image-product-desktop.jpg");
         height: 100%;
     }
 
