--- a/FrontendMentor/product-preview-card-component-main/css/style.css
+++ b/FrontendMentor/product-preview-card-component-main/css/style.css
@@ -50,7 +50,6 @@ body{
 
 .product{
     background-color: var(--White);
-    /* max-height: 600px;  */
     grid-column: 2/12;
     display: flex;
     flex-direction: column;
@@ -122,11 +121,12 @@ body{
 @media screen and (min-width: 960px) {
     
     .product{
-        display: flex;
-        flex-direction: row;
+        /* display: flex;
+        flex-direction: row; */
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
         grid-column: 5/9;
         margin-top: 150px;
-        max-height: 400px;
         justify-content: center;
     }
     
@@ -140,6 +140,7 @@ body{
 
     .product-image{
         width: 100%;
+        grid-column: span 2;
     }
     
     .product-image img{
@@ -149,6 +150,7 @@ body{
 
     .product-details{
         display: flex;
+        grid-column: span 2;
         justify-content: space-between;
         flex-direction: column;
     }
