--- a/FrontendMentor/product-preview-card-component-main/css/style.css
+++ b/FrontendMentor/product-preview-card-component-main/css/style.css
@@ -27,8 +27,8 @@ body{
 }
 
 .grid{
-    max-width: 80%;
-    margin: 0 auto;
+    max-width: 300px;
+    margin: auto auto;
 }
 
 .rounded{
@@ -49,7 +49,6 @@ body{
 
 .product{
     background-color: var(--White);
-    grid-column: 2/12;
     display: flex;
     flex-direction: column;
     margin-top: 50px;
