--- a/FrontendMentor/testimonials-grid-section-main/style.css
+++ b/FrontendMentor/testimonials-grid-section-main/style.css
@@ -34,7 +34,7 @@ main{
     background-image: url("./images/bg-pattern-quotation.svg");
     background-repeat: no-repeat;
     background-position: 90% 0%;
-    background-size: 40%;
+    background-size: 20%;
 }
 
 .dark-gray {
@@ -58,6 +58,9 @@ main{
     -ms-border-radius: 10px;
     -o-border-radius: 10px;
     margin-bottom: 25px;
+    box-shadow: 16px 13px 15px -3px rgba(201,200,200,0.27);
+    -webkit-box-shadow: 16px 13px 15px -3px rgba(201,200,200,0.27);
+    -moz-box-shadow: 16px 13px 15px -3px rgba(201,200,200,0.27);
 }
 
 .profile{
@@ -127,4 +130,58 @@ main{
 .white p{
     color: var(--Very-dark-grayish-blue);
     opacity: 0.7;
+}
+
+
+@media screen and (min-width: 1200px) {
+    main{
+        max-width: 70%;
+        padding: 0;
+        margin: 0 auto;
+        max-height: 600px;
+        display: grid;
+        margin-top: 100px;
+        grid-template-columns: repeat(8,1fr);
+        grid-template-rows: repeat(8,1fr); 
+        gap: 20px;
+        justify-content: start;
+        align-items: stretch;
+    }
+
+    .container{
+        width: auto;
+        margin: 0;
+    }
+
+    .purple{
+        grid-column: 1/5;
+        grid-row: 1/5;
+    }
+
+    .dark-gray{
+        grid-column: 5/7;
+        grid-row: 1/5;
+    }
+
+    .second{
+        display: block;
+        grid-column: 7/9;
+        grid-row: 1/9;
+    }
+    
+    .first{
+        grid-column: 1/3;
+        grid-row: 5/9;
+    }
+
+    .dark-blue{
+        grid-column: 3/7;
+        grid-row: 5/9;
+    }
+
+
+    /* .purple{
+        grid-column: 3/7;
+        grid-row: 4/7;
+    } */
 }
