--- a/FrontendMentor/space-tourism-website-main/assets/css/style.css
+++ b/FrontendMentor/space-tourism-website-main/assets/css/style.css
@@ -15,6 +15,8 @@
     --ff-sans-normal: "Barlow", sans-serif;
 
     --white: 0 0% 100%;
+
+    --clr-light: 231 77% 90%;
 }
 
 .bg-white { background-color: hsl( var(--white) );}
@@ -46,6 +48,10 @@
     color: hsl(var(--white));
 }
 
+.light-color{
+    color: hsl(var(--clr-light));
+}
+
 body{
     font-size: 0.9375rem;
     line-height: 1.5;
@@ -56,6 +62,18 @@ body{
 
 .home {
     background-image: url(../images/home/background-home-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.destination{
+    background-image: url(../images/destination/background-destination-mobile.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.crew{
+    background-image: url(../images/crew/background-crew-mobile.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -102,6 +120,7 @@ body{
 .nav-link.active{
     color: white !important;
 }
+
 /* 
 .active:hover{
     color: white;
@@ -152,9 +171,123 @@ body{
     transform: scale(1.5);
 }
 
+
+
+
+/*
+    Destination Styles
+*/
+
+.title--destination span{
+    color: #ffffff69;
+    margin-right: 10px;
+}
+
+.title--destination{
+    letter-spacing: 3px;
+}
+
+.tab-list{
+    list-style: none;
+}
+
+.tab-item{
+    padding: 5px 0px;
+}
+
+.tab-item a{
+    text-decoration: none;
+    color: hsl(var(--clr-light));
+    letter-spacing: 2px;
+}
+
+.tab-item:has(> a.active) {
+    border-bottom: 2px solid white;
+}
+
+a.active{
+    color: white;
+}
+
+.tab-item:hover{
+    border-bottom: 2px solid #ffffff69;
+}
+
+.line-divid{
+    color: #ffffff69;
+}
+
+/*
+    Crew Styles
+*/
+
+.container-grid{
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+    width: 80%;
+    padding-right: calc(var(--bs-gutter-x) * .5);
+    padding-left: calc(var(--bs-gutter-x) * .5);
+    margin-right: auto;
+    margin-left: auto;
+    display: grid;
+    /* grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr; */
+    grid-template-areas: "title"
+                         "image"
+                         "tabs"
+                         "content";
+}
+
+.title--crew{
+    grid-area: title;
+    margin: 0 auto;
+}
+
+.title--crew{
+    color: white;
+}
+
+.img--crew{
+    grid-area: image;
+    border-bottom: 1px solid #404040;
+}
+
+.dot{
+    background-color: gray;
+    border: 0;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    width: 1rem;
+    height: 1rem;
+}
+
+.dot:hover{
+    background-color: #c0c0c0;
+}
+
+.content{
+    grid-area: content;
+}
+
+.content h4{
+    color: #808080;
+}
+
+.dot.active{
+    background-color: white;
+}
+
+
 @media screen and (min-width: 576px) {
     .home{
         background-image: url(../images/home/background-home-tablet.jpg);
+    }
+    
+    .destination{
+        background-image: url(../images/destination/background-destination-tablet.jpg);
     }
 
     .navbar-expand-sm .offcanvas{
@@ -185,6 +318,25 @@ body{
     .large-btn{
         font-size: 3rem;
     }
+
+    .title--destination{
+        font-size: 1.25rem;
+    }
+
+    .crew{
+        background-image: url(../images/crew/background-crew-tablet.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    .container-grid{
+        grid-template-areas: "title"
+                             "content"
+                             "tabs"
+                             "image";
+    }
+
+
 }
 
 @media screen and (max-width: 576px) {
@@ -197,6 +349,21 @@ body{
     .home{
         background-image: url(../images/home/background-home-desktop.jpg);
     }
+
+    .destination{
+        background-image: url(../images/destination/background-destination-desktop.jpg);
+    }
+    .crew{
+        background-image: url(../images/crew/background-crew-desktop.jpg);
+    }
+
+    .container-grid{
+        width: 70%;
+        justify-items: start;
+        grid-template-areas: "title title"
+                             "content image"
+                             "tabs image";
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -206,6 +373,10 @@ body{
 
     .line{
         width: 30%;
+    }
+    
+    .title--destination{
+        font-size: 2rem;
     }
 }
 
@@ -218,4 +389,3 @@ body{
         width: 45%;
     }
 }
-
